# www/swagger.json
@@ -42,9 +42,9 @@
         "operationId": "GetAllToDo",
         "responses": {
           "200": {
-            "description": "A successful response.",
+            "description": "A successful response.(streaming responses)",
             "schema": {
-              "$ref": "#/definitions/AllToDoItems"
+              "$ref": "#/x-stream-definitions/AllToDoItems"
             }
           }
         },
@@ -53,7 +53,7 @@
         ]
       }
     },
-    "/api/todo/v1/{id}": {
+    "/api/todo/v1/{hash}": {
       "delete": {
         "operationId": "DeleteToDo",
         "responses": {
@@ -66,7 +66,7 @@
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "hash",
             "in": "path",
             "required": true,
             "type": "string"
@@ -88,7 +88,7 @@
         },
         "parameters": [
           {
-            "name": "id",
+            "name": "hash",
             "in": "path",
             "required": true,
             "type": "string"
@@ -113,10 +113,7 @@
       "type": "object",
       "properties": {
         "toDoItems": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/GetToDoItem"
-          }
+          "$ref": "#/definitions/GetToDoItem"
         },
         "genericResponse": {
           "$ref": "#/definitions/GenericResponse"
@@ -138,28 +135,22 @@
     "GetToDoItem": {
       "type": "object",
       "properties": {
-        "id": {
+        "hash": {
           "type": "string"
         },
-        "title": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
-        },
-        "status": {
-          "$ref": "#/definitions/Status"
+        "toDoItem": {
+          "$ref": "#/definitions/ToDoItem"
         }
       }
     },
     "Status": {
       "type": "string",
       "enum": [
-        "0:TODO",
-        "1:INPROGRESS",
-        "2:DONE"
+        "TODO",
+        "INPROGRESS",
+        "DONE"
       ],
-      "default": "0"
+      "default": "TODO"
     },
     "ToDoItem": {
       "type": "object",
@@ -175,6 +166,57 @@
         }
       },
       "title": "todo item represented by an id, title and a description"
+    },
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "type_url": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "runtimeStreamError": {
+      "type": "object",
+      "properties": {
+        "grpc_code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "http_code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "http_status": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
+    }
+  },
+  "x-stream-definitions": {
+    "AllToDoItems": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "$ref": "#/definitions/AllToDoItems"
+        },
+        "error": {
+          "$ref": "#/definitions/runtimeStreamError"
+        }
+      },
+      "title": "Stream result of AllToDoItems"
     }
   }
 }
